--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/n1.png") top center;
+  background: url("../img/bg1.jpeg") top center;
   background-size: cover;
 }
 
